@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.7
+Release: 0.8
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 License: GPL
@@ -496,6 +496,9 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Mon Jan 17 2005 Jeff Johnson <jbj@jbj.org> 4.4.1-0.8
+- changes to build on Mac OS X using darwinports neon/beecrypt.
+
 * Sun Jan  9 2005 Jeff Johnson <jbj@jbj.org> 4.4.1-0.7
 - build against external/internal neon.
 
