@@ -9,6 +9,7 @@
 	- mac os x patches (#131943,#131944,#132924,#132926).
 	- mac os x patches (#133611, #133612, #134637).
 	- build against external/internal neon.
+	- changes to build on Mac OS X using darwinports neon/beecrypt.
 
 4.3.3 -> 4.4:
 	- pentium3/pentium4 arch support (pluto@PLD).
